// Since: cosmos-sdk 0.47
syntax = "proto3";
package cosmos.consensus.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "cometbft/types/v1/params.proto";
import "cometbft/abci/v1/types.proto";

option go_package = "cosmossdk.io/x/consensus/types";

// Msg defines the consensus Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a governance operation for updating the x/consensus module parameters.
  // The authority is defined in the keeper.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse) {
    option (cosmos_proto.method_added_in) = "cosmos-sdk 0.47";
  }

  // SetCometInfo defines how to set the comet info for the x/consensus module.
  rpc SetCometInfo(MsgSetCometInfo) returns (MsgSetCometInfoResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "cosmos-sdk/x/consensus/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the x/consensus parameters to update.
  // VersionsParams is not included in this Msg because it is tracked
  // separarately in x/upgrade.
  //
  // NOTE: All parameters must be supplied.
  cometbft.types.v1.BlockParams     block     = 2;
  cometbft.types.v1.EvidenceParams  evidence  = 3;
  cometbft.types.v1.ValidatorParams validator = 4;

  // Since: cosmos-sdk 0.51
  cometbft.types.v1.ABCIParams      abci = 5 [deprecated = true, (cosmos_proto.field_added_in) = "cosmos-sdk 0.50"];
  cometbft.types.v1.SynchronyParams synchrony = 6 [(cosmos_proto.field_added_in) = "cosmos-sdk 0.51"];
  cometbft.types.v1.FeatureParams   feature   = 7 [(cosmos_proto.field_added_in) = "cosmos-sdk 0.52"];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgCometInfo is the Msg/CometInfo request type.
message MsgSetCometInfo {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "cosmos-sdk/x/consensus/MsgCometInfo";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // evidence is the misbehaviour evidence to submit.
  repeated cometbft.abci.v1.Misbehavior evidence = 2;

  // validators_hash is the hash of the current validator set.
  bytes validators_hash = 3;

  // proposer_address is the address of the current proposer.
  bytes proposer_address = 4;

  // last_commit is the last commit info.
  cometbft.abci.v1.CommitInfo last_commit = 5;
}

// MsgCometInfoResponse defines the response
message MsgSetCometInfoResponse {}
